// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config getConfig должен формировать URl к зафриженной статике без учета номера PR и коммита 1`] = `
Object {
  "bucket": "frontend-test",
  "concurrency": 512,
  "freeze": Object {
    "overwrite": false,
    "path": "build/_",
    "sources": Array [
      "**",
    ],
    "target": "test-pkg/_",
    "throwOnOverwrite": false,
  },
  "s3": Object {
    "accessKeyId": "test123",
    "endpoint": "s3.mds.yandex.net",
    "secretAccessKey": "test567",
    "usePublicUrl": false,
  },
  "static": Object {
    "overwrite": false,
    "path": "build/static",
    "sources": Array [
      "**/*.js",
      "**/*.css",
    ],
    "target": "test-pkg/v1.0.1/static",
    "throwOnOverwrite": false,
  },
  "useYastaticCdn": false,
}
`;

exports[`config getConfig должен формировать URl к зафриженной статике без учета номера PR и коммита 2`] = `
Object {
  "bucket": "frontend",
  "concurrency": 512,
  "freeze": Object {
    "overwrite": false,
    "path": "build/_",
    "sources": Array [
      "**",
    ],
    "target": "test-pkg/_",
    "throwOnOverwrite": false,
  },
  "s3": Object {
    "accessKeyId": "test123",
    "endpoint": "s3.mds.yandex.net",
    "secretAccessKey": "test567",
    "usePublicUrl": false,
  },
  "static": Object {
    "overwrite": false,
    "path": "build/static",
    "sources": Array [
      "**/*.js",
      "**/*.css",
    ],
    "target": "test-pkg/v1.0.1",
    "throwOnOverwrite": true,
  },
  "useYastaticCdn": true,
}
`;
